이마트24 업데이트

--- a/site/emart24/css/style.scss
+++ b/site/emart24/css/style.scss
@@ -30,8 +30,10 @@ a:active {
 
 #wrapper {
     position: relative;
+    max-width: 1920px;
     min-width: 1232px;
     overflow: hidden;
+    margin: 0 auto;
 }
 
 .wrap {
@@ -237,6 +239,9 @@ body {
     .visual .slide_control{left:0;}
 }
 @include mobile{
+    .visual{width:94%;}
+    .visual .slide_list{border-radius:0 0 16px 16px;}
+    .visual .slide_list .slide_item{height:45vw;}
     .visual .slide_list .slide_item a span.slide_pc{display: none;}
     .visual .slide_list .slide_item a span.slide_m{display: block;}
     .visual .slide_control{position:static;width:100%;padding:0;background-color: transparent;box-shadow:none;}
@@ -253,8 +258,8 @@ body {
     @include sectionAni;
 
     h2 {
+        @include h2FontSize;
         font-size: 45px;
-        line-height: 50px;
         color: $BasicColor;
     }
 
@@ -488,14 +493,14 @@ body {
 }
 
 @include mobile {
-    .event h2{font-size: 18px;line-height: 24px;}
+    .event{margin-top:64px;}
     .event .event_tab{flex-direction: column;}
     
     .event .tab_menu{width: 100%;min-width: none;margin: 0;margin-top:12px;}
     .event .tab_menu .tab_list{flex-direction: row;justify-content:space-between;gap: 8px;}
     .event .tab_menu .tab_item{width: 100%;}
     .event .tab_menu .tab_item + .tab_item{margin-top: 0;}
-    .event .tab_menu .tab_item .tab_btn{padding:9px 40px;border:0.5px solid #ebebeb;border-radius:16px;font-size: 14px;text-align: center;box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.05);}
+    .event .tab_menu .tab_item .tab_btn{padding:9px 0;border:0.5px solid #ebebeb;border-radius:16px;font-size: 14px;text-align: center;box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.05);}
     .event .tab_menu .tab_item .tab_btn span{vertical-align: middle;}
     .event .tab_menu .tab_item .tab_btn::before{display:inline-block;position:static;margin-right:10px;transform: scale(0.85);vertical-align: middle;}
     .event .tab_menu .tab_item .tab_btn::after{display: none;}
@@ -509,8 +514,7 @@ body {
     @include sectionAni;
     .title_box {
         h2 {
-            font-size: 48px;
-            line-height: 50px;
+            @include h2FontSize;
             color: $Black;
         }
 
@@ -628,6 +632,29 @@ body {
 
 
 }
+@include desktop1280 {
+}
+@include tablet {
+    .only_emart .only_slide{margin-top:50px;}
+    .only_emart .only_slide .slick-list {padding:20px 0 80px;}
+    .only_emart .only_slide .slide_item{opacity:0;}
+    .only_emart .only_slide .slide_item.slick-active{opacity:1;}
+    .only_emart .only_slide .slide_item a .img_box{height:30vw;}
+    .only_emart .only_slide .slide_item .item_logo img{display:inline-block;width:auto;}
+    .only_emart .only_slide .slide_item a .text_box{padding:0 15px 24px;}
+    .only_emart .only_slide .slide_item a .text_box .title{font-size:17px;}
+    .only_emart .only_slide .slide_item a .text_box p{height:40px;font-size:15px;line-height:20px;;}
+    .only_emart .only_slide .slide_item:hover{transform: translateY(0);}
+}
+@include mobile {
+    .only_emart{margin-top:90px;}
+    .only_emart .title_box span{display: none;}
+    .only_emart .only_slide .slick-list {padding:20px 20% 80px;}
+    .only_emart .only_slide .slide_item{opacity:1;}
+    .only_emart .only_slide .slide_item.slick-active{opacity:1;}
+    .only_emart .only_slide .slide_item a .img_box{height:50vw;}
+    
+}
 
 @keyframes gray {
     0% {
@@ -716,8 +743,8 @@ body {
         display: block;
         position: absolute;
         bottom: 0;
-        left: 216px;
-        width: 1800px;
+        right: 0;
+        width: calc(50vw + 744px);
         height: 100%;
         border-radius: 64px 0px 0px 192px;
         background: linear-gradient(#fece6a, #fee6b4);
@@ -727,8 +754,7 @@ body {
 
     .title_box {
         h2 {
-            font-size: 48px;
-            line-height: 50px;
+            @include h2FontSize;
             color: $Black;
         }
 
@@ -867,8 +893,10 @@ body {
         }
     }
 }
+@media all and (max-width:1520px){
+    .buisness::before{width:calc(50vw + 700px);}
+}
 @include desktop1280{
-    .buisness .title_box h2{font-size:38px;}
     .buisness .buisness_list li{height:377px;border-radius:24px;}
     .buisness .buisness_list li a .title{font-size:24px;}
     .buisness .buisness_list li a p{font-size:16px;}
@@ -877,17 +905,32 @@ body {
     .buisness .buisness_list li:nth-child(2) .icon span:before{height:180px;}
 }
 @include tablet{
+    .buisness{margin-top:160px;padding:70px 0}
     .buisness .buisness_list li{height:40vw;}
     .buisness .buisness_list li a .icon::before{height:17vw;}
     .buisness .buisness_list li:nth-child(2) .icon span:before{height:17vw}
     .buisness .buisness_list li:nth-child(2) .icon::after{height:17vw;}
 }
 @include mobile{
+    .buisness{margin-top:40px;padding:25px 0}
+    .buisness::before{background:#ffebc1;}
+    .buisness .title_box span{display: none;}
     .buisness .buisness_list{display: flex;flex-direction: column;gap:16px;}
     .buisness .buisness_list li{width:100%;height:auto;box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.05);}
+    .buisness .buisness_list li:hover{transform: translateY(0);}
     .buisness .buisness_list li::before{display: none;}
+    .buisness .buisness_list li a .icon{bottom:calc(50% - 55px);left:auto;right:0;width:154px;}
+    .buisness .buisness_list li a .icon::before{height:110px;}
+    .buisness .buisness_list li:nth-child(2) .icon span:before{height:110px}
+    .buisness .buisness_list li:nth-child(2) .icon::after{height:110px;}
+    .buisness .buisness_list li:hover .icon::before{animation: none !important;}
+    .buisness .buisness_list li:hover .icon::after{animation: none !important;}
     .buisness .buisness_list li a .title{margin-bottom:0;font-size:16px;}
     .buisness .buisness_list li a p{font-size:14px;line-height:24px;color: $gray;}
+}
+@media all and (max-width:480px){
+    .buisness .buisness_list li a .icon{width:120px;}
+
 }
 
 @keyframes pin {
@@ -1187,8 +1230,7 @@ body {
     .title_box{
         float: left;
         h2{
-            font-size:48px;
-            line-height:52px;
+            @include h2FontSize;
             font-weight:700;
             em{
                 display: block;
@@ -1252,7 +1294,7 @@ body {
     .sns_slide{
         position: relative;
         float: right;
-        width: 908px;
+        width: calc(100% - 314px);
         height: 561px;
         .odd{
             .slide_item{
@@ -1414,14 +1456,30 @@ body {
         }
     }
 }
+@include desktop1280{
+    .story .sns_slide .slide_item{width:222px;}
+    .story .sns_slide .slide_item a .img_box{height:335px;}
+}
+@include tablet{
+    .story .sns_slide .slide_item a .img_box{border-radius:24px;}
+    .story .sns_slide .slide_item:nth-child(2n - 1) .img_box{border-radius:24px;}
+}
 @include mobile{
     .story{margin-top: 96px;}
-    .story .title_box h2{font-size:18px;line-height:24px;}
     .story .title_box h2 em{display: inline-block;font-weight:600;}
     .story .title_box span{display:none;}
     .story .title_box .sns_list{display: none;}
-    .story .sns_slide{margin-top:16px;}
+    .story .sns_slide{margin-top:16px;width:100%;height: auto;}
+    .story .sns_slide .slide_item a .img_box{height: 50vw;}
+    .story .sns_slide .slide_item a .text_box .title .icon{width:24px;height:24px;}
+    .story .sns_slide .slide_item a .text_box .title .icon::before{transform: scale(0.6);}
+    .story .sns_slide .slide_item a .text_box .title span{font-size:18px;line-height:26px;}
+    .story .sns_slide .slide_item a .text_box .title p{margin-left:38px;font-size:13px;line-height:20px;}
+    .story .sns_slide .odd .slide_item:nth-child(odd){margin-top:0;}
     .story .sns_slide .even .slide_item:nth-child(even){margin-top:0;}
+    .story .sns_slide .control_box{display: none;}
+    
+    
     
 }
 
